# computer-vision

./: .pre-commit-config.yaml  404.html  LICENSE  Projekt_Spurerkennung_v2.ipynb  README.md  codecov.yml  index.html  main.ipynb  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yaml
calibration/: index.html
detection/: index.html
docs/: calibration.md  detection.md  hello_world.md  image.md  pre_processing.md  requirements_docs.txt  segmentation.md  video.md
docs/detection/: detection.md
docs/extraction/: extraction.md
docs/segmentation/: segmentation.md
image/: index.html
license/: index.html
pre_processing/: index.html
search/: search_index.json
segmentation/: index.html
src/: __init__.py  calibration.py  detection.py  hello_world.py  image.py  pre_processing.py  segmentation.py  video.py
src/detection/: edges.py  lane.py  lines.py
src/extraction/: lines.py
src/segmentation/: mask.py
src/template/: lane.py
tests/: test_hello_world.py
video/: index.html
