[tool.poetry]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = [
  "Fabian Thome <thome.fabian@web.de>",
  "Stephan auf der Landwehr <test@test.de>",
  "Nick Schroeder <nick.b.schroeder@outlook.de>",
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
numpy = "^1.23.4"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^22.8.0" }
isort = "^5.10.1"
mypy = "^0.981"
pylint = "^2.15.3"
flake8 = "^5.0.4"
pytest = "^7.1.3"
autopep8 = "^1.7.0"
pre-commit = "^2.20.0"
pytest-cov = {extras = ["toml"], version = "^4.0.0"}
jupyter = "^1.0.0"
types-requests = "^2.28.11.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-material = "^8.5.10"
pymdown-extensions = "^9.8"
mkdocs-meta-descriptions-plugin = "^2.1.0"

[tool.mypy]
mypy_path = 'src'
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
disallow_untyped_defs = true
warn_no_return = true

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | .*\.pyc$
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | deploy
  | presentations
)/
'''

pretty = "True"

[tool.isort]
profile = "black"

[tool.pylint]
disable="missing-module-docstring, broad-except"
max-line-length=120

[tool.pytest]
testpaths = "tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
